# learn_rust

./: .env  Cargo.toml  README.md
migrations/2022-12-05-040454_init_tabel/: down.sql  up.sql
migrations/2022-12-08-054839_reservation/: down.sql  up.sql
src/: documentation.rs  lib.rs  main.rs  schema.rs
src/apis/: cars_api.rs  invoice_api.rs  location_api.rs  mod.rs  reservation_api.rs  return_reservation_api.rs  user.rs
src/models/: cars.rs  location.rs  mod.rs  reservation.rs  return_reservation.rs  user_detail.rs  user_token.rs  users.rs
src/repos/: cars_repo.rs  location_repo.rs  mod.rs  reservation_repo.rs  return_reservation_repo.rs  users_repo.rs
src/static/: redoc.html
src/test/: mod.rs
tests/: integration_test.rs
tests/apis/: mod.rs  test_cars_api.rs  test_location_api.rs  test_reservation_api.rs  test_return_reservation_api.rs  test_user_api.rs
tests/data/: data.rs
