[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
actix = "0.13.0"
actix-web = "4"
actix-cors = "0.6.4" 
chrono = {version="0.4.23", features=["serde"]}
jsonwebtoken = "8.2.0"